--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head><script type='text/javascript' src='https://ppl-ai-code-interpreter-files.s3.amazonaws.com/zfzBUKF7e2_2M8SV9cxrW3ywJzkpm7NOeZ1P2X5QjtTHDJBcYgL6QknpE__ywDWXh7hNMNeNgl51xr0UtntLk7RVLF_u_d-wYz1uTCC3NrnH_voV6bmt-iIW92bhSDFIOq9gkVW5g7RJaYbFmTvW2aCFYyrzBvwTyBQBC9Zz3KxCRBNuDV5D8_zz-ZFtm87yFoR2kzBUO6asBN9_2stEZE9ORPk95G-E6hSF-e4pSXa-ZgYfrxO9ZlSXGpk0ZB4av4o6TLo-PosfYB-j1S6Bh4FylnFgemOx7mwE2pMnT20zw-aboY0D3ODZUXQZdaeI2qe1M22jtvuiXvabHLjb1MJrlAQEbeVn5uavx_tcZtDfxZqpINma0e-vBh44tS08IJUFNH7zuadbis6jL8MjTP6H9qZIRjF7tSBwKtg4fAs_7jnL7aJ_CK36Ck9yktwf7p42jAu53s_6163mmh_I1S5To_RhFBZ4xEcO30N5z_eKoVAz-Ytm8p2TNdlL_NWImYuaMaPk8iAsAqRj_fsO8-nZzyQVII9WzgJnWOgqPg9GEpvMXKkYOSKOtbbQgJR3FqahiX25Ernk4coAGCV1hLlOKVaEiA5-S4zFnzsTC0vVJN1oE20xRKJQPeL4bUmD6GRWRWj49vELsQAn_JY23prhY2WLqtJ6AqKY6MSLOuig44VnOd31blp0Pebcmqj0vdXDFNur65E1CdbS8quAi_6WGVbl5aeQug8oqcOjZsV5xTY8QSm3k3Elk8-fGkiBMTd6gG05W8s6njpB18v1b9M_ZeC4g9WjAxP26ixnkwhJCICCjfpBTeXJMyvZroPyzcMcRnsYshaNdLZSDGqxoC4DlO8u6PPHUDed5LI6Obs_gUzoAsYd9xz30rZ6ssYmmEfzO2_S2ZZWJKWyGfGmS6YLlFeR5ux3n3mtFkQltK5NY0bQtzJB3_EvhuUIXuhTZQ23Gd5fHbxrFMO-PpKPZTzotgor0IgQPBBNwcih0ruhZz0Nv4q9f89NQ7YjdDGWe5AgYruv8OFz6QoGO-j_F36ms3uWCRkKndIDQNLvze_7rcBKTCDo7VbZqbo0jFxYl53VRntrAAfLvjgRwFKLA20P0iRUpWcjtESj-bEwX5STTN5DnIIkLkS5PR_3cDzhPD9jHbdxk30Z16iJudtSg1Nqvzxt5t-n-5v4-mQJB21hpOftPnvCOrUo74sMMPMsClxaFCZrK3m50Ebpv4tsNblKadaBHqHW6pxNSfz8sd514XFq9L0Yj9BrDSYpPWXEyD8AZjjNavO1-VsNvidQY1aSON3-_VLdXdwJyT7dkkPPHLg-wu1DSzhFBCQKgDHqKzy9HDFvLgPLnZuaacwkEaQS75ndDjGm-I7YjV0Uc1P98CS6P3VcoxEX46LQLBhbDk59xdP2F0asOGNKO4baW13PsGgQ4zXOJLWJjsIHR958Bbm-2MKGn6kRgIJv9yyf58JpDxcLwWakH4taZgTL_V6iZOpgm7IH2fIAkx7zDTLxwYEx7iuhoi_VyjZ21tNTP3tNUL2Lgv0KElJ3pGGbMPaT1QuCNSOaEJNKz_QpHpqDsKIqoGVI7o2hR_aRvC-JoRsnGuAjaivVhg6d0_ZJUuAbg2z-o4o0ZPhVKZOCGzW1V5mAhV4CmDsblWtbwzoaSgi8WyxIxT5wNBOHGL5miKNs_BQCk3RjGF3qLbum05-s-YXtqqr_MVryTpNXuD4O55_Xu7E_KHSreAssUbv0I_ptk1Rua9BxEl4o76WUBrBurKmjKuU9wYOREUX87HrhU3OHB0YgrBrLSd5Jla6mhOpVDFoxEc8mpjBNDJYFWxlzME_ncD1c2avEr3L07--UD939rtLswYnJFlkXcJ_SMloJo2NfYcp_vI5wIeZ65dxQgs9OOKJkQgOF_9cOsgc0BSyJbWJ4c0qRVvcw9VzhrVO5_PHkTIlLh1-NACIKgsVF3Vy5YNKJ-V4BRHE68bGade1HPGbyuy40CBE6fbliGuS0-WTxWW4-tVEb3RU2kYLwPi-Clx-Aua9C6JgKxW_ZIFUZGHSdBJ3dVJ3bBz38RV7BSTCB9WvIFdKS3_PvnKquAMatjUxycEtdjw3CL5nYdUt7HfaC7fF0UdBWKXxu0w5Pxkfwb-6WZqHUo4pxG2ASVcC6yk1POUEiGRIwrkyksQ3jOXmOpZq-SJPV_7F1gz6jkN7gjNdm3c5KyqpyXEoZOIit8kMn2Gmy89XjTHylagIiorCJ2jrh1282daSbrUStQInLuz09ShTixCzO5sX8sMwN4yeNg6gev9J3lFB-i1cDqUH0uD3Cibz2l4ZZnhImS8IU0BD-xyyH6j3faf-DQTT04QcY_oKT4erkdC5r2uLL3b6NEVC3pM2aZbroczpXUPYJFDExOy_w2Nuo8dUYRlH8fJIlra0W3CzuDQ2DMFULKw5LpxONFcAAwA72rCZhBbWKdlqOUgOfsV2Ri9fZlGzFb558WQ8pCVMTcmcGgFNkpU0JvU6NeIJUhmDns860NASlJWHt1-5JNKRQpXh9TN623e8KtRPb0APy8_X5DH7PS-28oT2Yf3Ln82rwgYvIwGE_TJKwZIgu4ghQfpSWcmET4_wBXb9qcdOfg5zeO-WQWxT9bZFGPk-MC5MP1cSj9EG0cwM4QLxyB4NKP50u5wqLL5YYFd71GiyH7fyB9QsFLl9AEy4XBBtwlymZI03Wgu4vjw'></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aegis - Modern Portfolio</title>
+    <title>Zenkai's Portfolio</title>
     <style>
         * {
             margin: 0;
@@ -555,7 +555,7 @@
         <div class="dot red"></div>
         <div class="dot yellow"></div>
         <div class="dot green"></div>
-        <span class="terminal-text">root@aegis:~#</span>
+        <span class="terminal-text">root@Zenkai:~#</span>
     </div>
 
     <!-- Main Container -->
@@ -566,14 +566,14 @@
                 <div class="orbital-ring">
                     <div class="orbital-dot"></div>
                 </div>
-                <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=aegis" alt="Aegis" class="profile-image">
+                <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Zenkai" alt="Zenkai" class="profile-image">
             </div>
 
-            <h1>AEGIS</h1>
+            <h1>Zenkai</h1>
             <p class="subtitle">Bot & Backend Developer</p>
 
             <div class="bio">
-                Hello, I'm Aegis, a professional bot developer specializing in modern digital solutions. 
+                Hello, I'm Zenkai, a professional bot developer specializing in modern digital solutions. 
                 I create reliable, scalable applications that help businesses grow and succeed online.
             </div>
 
@@ -724,8 +724,8 @@
             <h2>Get In Touch</h2>
             <div class="contact-info">
                 <p>Interested in working together? Feel free to reach out!</p>
-                <a href="mailto:aegis@strelixcloud.com" class="contact-email">
-                    aegis@strelixcloud.com
+                <a href="mailto:Zenkai@strelixcloud.com" class="contact-email">
+                    Zenkai@strelixcloud.com
                 </a>
 
                 <div class="social-links">
@@ -752,7 +752,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2026 Aegis. Built with passion and terminal vibes.</p>
+        <p>&copy; 2026 Zenkai. Built with passion and terminal vibes.</p>
         <p style="margin-top: 10px; font-size: 0.9rem;">Powered by modern web technologies</p>
     </footer>
 
@@ -838,7 +838,7 @@
 
         // Console easter egg
         console.log('%c👋 Welcome to my portfolio!', 'color: #22c55e; font-size: 20px; font-weight: bold;');
-        console.log('%cLooking to hire? Email me at aegis@strelixcloud.com', 'color: #888; font-size: 14px;');
+        console.log('%cLooking to hire? Email me at Zenkai@strelixcloud.com', 'color: #888; font-size: 14px;');
     </script>
 </body>
 </html>
