--- a/portfolio.html
+++ b/portfolio.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><script type='text/javascript' src='https://ppl-ai-code-interpreter-files.s3.amazonaws.com/zfzBUKF7e2_2M8SV9cxrW3ywJzkpm7NOeZ1P2X5QjtTHDJBcYgL6QknpE__ywDWXh7hNMNeNgl51xr0UtntLk7RVLF_u_d-wYz1uTCC3NrnH_voV6bmt-iIW92bhSDFIOq9gkVW5g7RJaYbFmTvW2aCFYyrzBvwTyBQBC9Zz3KxCRBNuDV5D8_zz-ZFtm87yFoR2kzBUO6asBN9_2stEZE9ORPk95G-E6hSF-e4pSXa-ZgYfrxO9ZlSXGpk0ZB4av4o6TLo-PosfYB-j1S6Bh4FylnFgemOx7mwE2pMnT20zw-aboY0D3ODZUXQZdaeI2qe1M22jtvuiXvabHLjb1MJrlAQEbeVn5uavx_tcZtDfxZqpINma0e-vBh44tS08IJUFNH7zuadbis6jL8MjTP6H9qZIRjF7tSBwKtg4fAs_7jnL7aJ_CK36Ck9yktwf7p42jAu53s_6163mmh_I1S5To_RhFBZ4xEcO30N5z_eKoVAz-Ytm8p2TNdlL_NWImYuaMaPk8iAsAqRj_fsO8-nZzyQVII9WzgJnWOgqPg9GEpvMXKkYOSKOtbbQgJR3FqahiX25Ernk4coAGCV1hLlOKVaEiA5-S4zFnzsTC0vVJN1oE20xRKJQPeL4bUmD6GRWRWj49vELsQAn_JY23prhY2WLqtJ6AqKY6MSLOuig44VnOd31blp0Pebcmqj0vdXDFNur65E1CdbS8quAi_6WGVbl5aeQug8oqcOjZsV5xTY8QSm3k3Elk8-fGkiBMTd6gG05W8s6njpB18v1b9M_ZeC4g9WjAxP26ixnkwhJCICCjfpBTeXJMyvZroPyzcMcRnsYshaNdLZSDGqxoC4DlO8u6PPHUDed5LI6Obs_gUzoAsYd9xz30rZ6ssYmmEfzO2_S2ZZWJKWyGfGmS6YLlFeR5ux3n3mtFkQltK5NY0bQtzJB3_EvhuUIXuhTZQ23Gd5fHbxrFMO-PpKPZTzotgor0IgQPBBNwcih0ruhZz0Nv4q9f89NQ7YjdDGWe5AgYruv8OFz6QoGO-j_F36ms3uWCRkKndIDQNLvze_7rcBKTCDo7VbZqbo0jFxYl53VRntrAAfLvjgRwFKLA20P0iRUpWcjtESj-bEwX5STTN5DnIIkLkS5PR_3cDzhPD9jHbdxk30Z16iJudtSg1Nqvzxt5t-n-5v4-mQJB21hpOftPnvCOrUo74sMMPMsClxaFCZrK3m50Ebpv4tsNblKadaBHqHW6pxNSfz8sd514XFq9L0Yj9BrDSYpPWXEyD8AZjjNavO1-VsNvidQY1aSON3-_VLdXdwJyT7dkkPPHLg-wu1DSzhFBCQKgDHqKzy9HDFvLgPLnZuaacwkEaQS75ndDjGm-I7YjV0Uc1P98CS6P3VcoxEX46LQLBhbDk59xdP2F0asOGNKO4baW13PsGgQ4zXOJLWJjsIHR958Bbm-2MKGn6kRgIJv9yyf58JpDxcLwWakH4taZgTL_V6iZOpgm7IH2fIAkx7zDTLxwYEx7iuhoi_VyjZ21tNTP3tNUL2Lgv0KElJ3pGGbMPaT1QuCNSOaEJNKz_QpHpqDsKIqoGVI7o2hR_aRvC-JoRsnGuAjaivVhg6d0_ZJUuAbg2z-o4o0ZPhVKZOCGzW1V5mAhV4CmDsblWtbwzoaSgi8WyxIxT5wNBOHGL5miKNs_BQCk3RjGF3qLbum05-s-YXtqqr_MVryTpNXuD4O55_Xu7E_KHSreAssUbv0I_ptk1Rua9BxEl4o76WUBrBurKmjKuU9wYOREUX87HrhU3OHB0YgrBrLSd5Jla6mhOpVDFoxEc8mpjBNDJYFWxlzME_ncD1c2avEr3L07--UD939rtLswYnJFlkXcJ_SMloJo2NfYcp_vI5wIeZ65dxQgs9OOKJkQgOF_9cOsgc0BSyJbWJ4c0qRVvcw9VzhrVO5_PHkTIlLh1-NACIKgsVF3Vy5YNKJ-V4BRHE68bGade1HPGbyuy40CBE6fbliGuS0-WTxWW4-tVEb3RU2kYLwPi-Clx-Aua9C6JgKxW_ZIFUZGHSdBJ3dVJ3bBz38RV7BSTCB9WvIFdKS3_PvnKquAMatjUxycEtdjw3CL5nYdUt7HfaC7fF0UdBWKXxu0w5Pxkfwb-6WZqHUo4pxG2ASVcC6yk1POUEiGRIwrkyksQ3jOXmOpZq-SJPV_7F1gz6jkN7gjNdm3c5KyqpyXEoZOIit8kMn2Gmy89XjTHylagIiorCJ2jrh1282daSbrUStQInLuz09ShTixCzO5sX8sMwN4yeNg6gev9J3lFB-i1cDqUH0uD3Cibz2l4ZZnhImS8IU0BD-xyyH6j3faf-DQTT04QcY_oKT4erkdC5r2uLL3b6NEVC3pM2aZbroczpXUPYJFDExOy_w2Nuo8dUYRlH8fJIlra0W3CzuDQ2DMFULKw5LpxONFcAAwA72rCZhBbWKdlqOUgOfsV2Ri9fZlGzFb558WQ8pCVMTcmcGgFNkpU0JvU6NeIJUhmDns860NASlJWHt1-5JNKRQpXh9TN623e8KtRPb0APy8_X5DH7PS-28oT2Yf3Ln82rwgYvIwGE_TJKwZIgu4ghQfpSWcmET4_wBXb9qcdOfg5zeO-WQWxT9bZFGPk-MC5MP1cSj9EG0cwM4QLxyB4NKP50u5wqLL5YYFd71GiyH7fyB9QsFLl9AEy4XBBtwlymZI03Wgu4vjw'></script>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zenkai's Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
     <style>
         * {
             margin: 0;
@@ -42,7 +46,7 @@
         }
 
         body {
-            font-family: 'Courier New', monospace;
+            font-family: 'Space Mono', monospace;
             background: hsl(var(--background));
             color: hsl(var(--foreground));
             overflow-x: hidden;
@@ -203,6 +207,7 @@
             color: hsl(var(--primary));
             text-shadow: 0 0 20px rgba(34, 197, 94, 0.5);
             animation: fadeInUp 1s ease-out;
+            font-weight: 700;
         }
 
         .subtitle {
@@ -219,6 +224,19 @@
             margin: 0 auto 40px;
             color: hsl(var(--foreground));
             animation: fadeInUp 1s ease-out 0.4s backwards;
+            min-height: 100px;
+        }
+
+        /* Typed.js cursor styling */
+        .typed-cursor {
+            color: hsl(var(--accent));
+            font-weight: 700;
+            animation: blink 0.7s infinite;
+        }
+
+        @keyframes blink {
+            0%, 100% { opacity: 1; }
+            50% { opacity: 0; }
         }
 
         @keyframes fadeInUp {
@@ -268,12 +286,13 @@
             color: hsl(var(--primary-foreground));
             border: none;
             border-radius: var(--radius);
-            font-family: 'Courier New', monospace;
+            font-family: 'Space Mono', monospace;
             font-size: 1rem;
             cursor: pointer;
             transition: all 0.3s;
             text-decoration: none;
             margin: 5px;
+            font-weight: 700;
         }
 
         .btn:hover {
@@ -303,6 +322,7 @@
             color: hsl(var(--primary));
             text-align: center;
             position: relative;
+            font-weight: 700;
         }
 
         h2::after {
@@ -361,6 +381,7 @@
             color: hsl(var(--accent));
             margin-bottom: 15px;
             font-size: 1.5rem;
+            font-weight: 700;
         }
 
         .card p {
@@ -390,14 +411,20 @@
         }
 
         .skill-icon {
-            font-size: 3rem;
+            font-size: 4rem;
             margin-bottom: 15px;
+            color: hsl(var(--accent));
+        }
+
+        .skill-icon i {
+            display: inline-block;
         }
 
         .skill-name {
             color: hsl(var(--primary));
             font-size: 1.2rem;
             margin-bottom: 10px;
+            font-weight: 700;
         }
 
         .badge {
@@ -433,13 +460,13 @@
         .social-links {
             display: flex;
             justify-content: center;
-            gap: 20px;
+            gap: 30px;
             margin: 30px 0;
         }
 
         .social-link {
-            width: 50px;
-            height: 50px;
+            width: 60px;
+            height: 60px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -448,8 +475,16 @@
             border-radius: 50%;
             color: hsl(var(--foreground));
             text-decoration: none;
-            font-size: 1.5rem;
+            font-size: 1.8rem;
             transition: all 0.3s;
+            position: relative;
+        }
+
+        .social-link svg {
+            width: 30px;
+            height: 30px;
+            fill: hsl(var(--foreground));
+            transition: fill 0.3s;
         }
 
         .social-link:hover {
@@ -459,49 +494,8 @@
             box-shadow: 0 5px 20px rgba(34, 197, 94, 0.4);
         }
 
-        /* Friends Section */
-        .friends-section {
-            margin-top: 60px;
-        }
-
-        .friend-card {
-            background: hsl(var(--card));
-            border: 1px solid hsl(var(--card-border));
-            border-radius: var(--radius);
-            padding: 20px;
-            display: flex;
-            gap: 20px;
-            align-items: center;
-            transition: all 0.3s;
-            margin-bottom: 15px;
-        }
-
-        .friend-card:hover {
-            border-color: hsl(var(--accent));
-            transform: translateX(10px);
-        }
-
-        .friend-avatar {
-            width: 60px;
-            height: 60px;
-            border-radius: 50%;
-            background: hsl(var(--accent));
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 1.5rem;
-            font-weight: bold;
-            color: hsl(var(--background));
-        }
-
-        .friend-info h4 {
-            color: hsl(var(--primary));
-            margin-bottom: 5px;
-        }
-
-        .friend-info p {
-            color: hsl(var(--muted-foreground));
-            font-size: 0.9rem;
+        .social-link:hover svg {
+            fill: hsl(var(--background));
         }
 
         /* Responsive */
@@ -528,11 +522,6 @@
             .card-grid,
             .skills-grid {
                 grid-template-columns: 1fr;
-            }
-
-            .friend-card {
-                flex-direction: column;
-                text-align: center;
             }
         }
 
@@ -569,12 +558,11 @@
                 <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Zenkai" alt="Zenkai" class="profile-image">
             </div>
 
-            <h1>Zenkai</h1>
+            <h1>ZENKAI</h1>
             <p class="subtitle">Bot & Backend Developer</p>
 
             <div class="bio">
-                Hello, I'm Zenkai, a professional bot developer specializing in modern digital solutions. 
-                I create reliable, scalable applications that help businesses grow and succeed online.
+                <span id="typed-text"></span>
             </div>
 
             <div class="status">
@@ -612,7 +600,9 @@
             <h2>Skills & Technologies</h2>
             <div class="skills-grid">
                 <div class="skill-card">
-                    <div class="skill-icon">🐍</div>
+                    <div class="skill-icon">
+                        <i class="devicon-python-plain colored"></i>
+                    </div>
                     <div class="skill-name">Python</div>
                     <div>
                         <span class="badge">Discord.py</span>
@@ -621,7 +611,9 @@
                     </div>
                 </div>
                 <div class="skill-card">
-                    <div class="skill-icon">⚡</div>
+                    <div class="skill-icon">
+                        <i class="devicon-nodejs-plain colored"></i>
+                    </div>
                     <div class="skill-name">Node.js</div>
                     <div>
                         <span class="badge">Express</span>
@@ -630,7 +622,9 @@
                     </div>
                 </div>
                 <div class="skill-card">
-                    <div class="skill-icon">🗄️</div>
+                    <div class="skill-icon">
+                        <i class="devicon-mongodb-plain colored"></i>
+                    </div>
                     <div class="skill-name">Databases</div>
                     <div>
                         <span class="badge">MongoDB</span>
@@ -639,7 +633,9 @@
                     </div>
                 </div>
                 <div class="skill-card">
-                    <div class="skill-icon">☁️</div>
+                    <div class="skill-icon">
+                        <i class="devicon-docker-plain colored"></i>
+                    </div>
                     <div class="skill-name">Cloud & DevOps</div>
                     <div>
                         <span class="badge">Docker</span>
@@ -684,64 +680,28 @@
             </div>
         </section>
 
-        <!-- Friends Section -->
-        <section id="friends" class="friends-section">
-            <h2>Network & Collaborators</h2>
-            <div style="max-width: 800px; margin: 0 auto;">
-                <div class="friend-card">
-                    <div class="friend-avatar">AZ</div>
-                    <div class="friend-info">
-                        <h4>Azuren</h4>
-                        <p>Discord Server Designer | Management, Aesthetic, Embeds</p>
-                    </div>
-                </div>
-                <div class="friend-card">
-                    <div class="friend-avatar">ZZ</div>
-                    <div class="friend-info">
-                        <h4>ZenpaiZombie</h4>
-                        <p>Founder @ StrelixCloud | Proxmox, KVM, Virtualization</p>
-                    </div>
-                </div>
-                <div class="friend-card">
-                    <div class="friend-avatar">NK</div>
-                    <div class="friend-info">
-                        <h4>Nkash</h4>
-                        <p>VPS Specialist | Networking, KVM, Docker</p>
-                    </div>
-                </div>
-                <div class="friend-card">
-                    <div class="friend-avatar">MR</div>
-                    <div class="friend-info">
-                        <h4>Miorin</h4>
-                        <p>Security Researcher | Python, Machine Learning, TensorFlow</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
         <!-- Contact Section -->
         <section id="contact">
             <h2>Get In Touch</h2>
             <div class="contact-info">
                 <p>Interested in working together? Feel free to reach out!</p>
+                
+                <div class="social-links">
+                    <a href="https://discord.com/users/YOUR_DISCORD_ID" target="_blank" class="social-link" title="Discord">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 127.14 96.36">
+                            <path d="M107.7,8.07A105.15,105.15,0,0,0,81.47,0a72.06,72.06,0,0,0-3.36,6.83A97.68,97.68,0,0,0,49,6.83,72.37,72.37,0,0,0,45.64,0,105.89,105.89,0,0,0,19.39,8.09C2.79,32.65-1.71,56.6.54,80.21h0A105.73,105.73,0,0,0,32.71,96.36,77.7,77.7,0,0,0,39.6,85.25a68.42,68.42,0,0,1-10.85-5.18c.91-.66,1.8-1.34,2.66-2a75.57,75.57,0,0,0,64.32,0c.87.71,1.76,1.39,2.66,2a68.68,68.68,0,0,1-10.87,5.19,77,77,0,0,0,6.89,11.1A105.25,105.25,0,0,0,126.6,80.22h0C129.24,52.84,122.09,29.11,107.7,8.07ZM42.45,65.69C36.18,65.69,31,60,31,53s5-12.74,11.43-12.74S54,46,53.89,53,48.84,65.69,42.45,65.69Zm42.24,0C78.41,65.69,73.25,60,73.25,53s5-12.74,11.44-12.74S96.23,46,96.12,53,91.08,65.69,84.69,65.69Z"/>
+                        </svg>
+                    </a>
+                    <a href="mailto:Zenkai@strelixcloud.com" class="social-link" title="Email">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                            <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
+                        </svg>
+                    </a>
+                </div>
+
                 <a href="mailto:Zenkai@strelixcloud.com" class="contact-email">
                     Zenkai@strelixcloud.com
                 </a>
-
-                <div class="social-links">
-                    <a href="https://github.com" target="_blank" class="social-link" title="GitHub">
-                        <span>📘</span>
-                    </a>
-                    <a href="https://discord.com" target="_blank" class="social-link" title="Discord">
-                        <span>💬</span>
-                    </a>
-                    <a href="https://twitter.com" target="_blank" class="social-link" title="Twitter">
-                        <span>🐦</span>
-                    </a>
-                    <a href="https://linkedin.com" target="_blank" class="social-link" title="LinkedIn">
-                        <span>💼</span>
-                    </a>
-                </div>
 
                 <p style="margin-top: 30px; color: hsl(var(--muted-foreground));">
                     Available for freelance projects and full-time opportunities
@@ -756,7 +716,22 @@
         <p style="margin-top: 10px; font-size: 0.9rem;">Powered by modern web technologies</p>
     </footer>
 
+    <!-- Typed.js Library -->
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.16"></script>
+
     <script>
+        // Typing animation for bio
+        var typed = new Typed('#typed-text', {
+            strings: [
+                "Hello, I'm Zenkai, a professional bot developer specializing in modern digital solutions. I create reliable, scalable applications that help businesses grow and succeed online."
+            ],
+            typeSpeed: 50,
+            backSpeed: 30,
+            loop: false,
+            showCursor: true,
+            cursorChar: '|'
+        });
+
         // Create animated particles
         const particlesContainer = document.getElementById('particles');
         for (let i = 0; i < 50; i++) {
@@ -829,7 +804,7 @@
         }, observerOptions);
 
         // Observe all cards and sections
-        document.querySelectorAll('.card, .skill-card, .friend-card').forEach(el => {
+        document.querySelectorAll('.card, .skill-card').forEach(el => {
             el.style.opacity = '0';
             el.style.transform = 'translateY(30px)';
             el.style.transition = 'all 0.6s ease-out';
