--- a/portfolio.html
+++ b/portfolio.html
@@ -246,30 +246,138 @@
             }
         }
 
-        /* Status Badge */
-        .status {
-            display: inline-flex;
-            align-items: center;
-            gap: 8px;
-            background: hsl(var(--card));
-            border: 1px solid hsl(var(--border));
-            padding: 8px 16px;
-            border-radius: var(--radius);
-            margin: 20px 0;
+        /* Improved Availability Card */
+        .availability-card {
+            background: linear-gradient(135deg, hsl(var(--card)) 0%, hsl(var(--background-secondary)) 100%);
+            border: 2px solid hsl(var(--accent));
+            border-radius: 16px;
+            padding: 30px;
+            margin: 30px auto;
+            max-width: 500px;
+            box-shadow: 0 10px 40px rgba(34, 197, 94, 0.2);
             animation: fadeInUp 1s ease-out 0.6s backwards;
+            position: relative;
+            overflow: hidden;
         }
 
-        .status-dot {
-            width: 8px;
-            height: 8px;
+        .availability-card::before {
+            content: '';
+            position: absolute;
+            top: -50%;
+            right: -50%;
+            width: 200%;
+            height: 200%;
+            background: radial-gradient(circle, rgba(34, 197, 94, 0.1) 0%, transparent 70%);
+            animation: rotate-gradient 10s linear infinite;
+        }
+
+        @keyframes rotate-gradient {
+            from { transform: rotate(0deg); }
+            to { transform: rotate(360deg); }
+        }
+
+        .availability-header {
+            display: flex;
+            align-items: center;
+            gap: 20px;
+            margin-bottom: 20px;
+            position: relative;
+            z-index: 1;
+        }
+
+        .status-indicator {
+            position: relative;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .status-dot-outer {
+            width: 60px;
+            height: 60px;
             background: hsl(var(--accent));
             border-radius: 50%;
-            animation: pulse 2s ease-in-out infinite;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: relative;
+            animation: pulse-ring 2s ease-in-out infinite;
+            box-shadow: 0 0 20px rgba(34, 197, 94, 0.5);
         }
 
-        @keyframes pulse {
-            0%, 100% { opacity: 1; transform: scale(1); }
-            50% { opacity: 0.5; transform: scale(1.2); }
+        .status-dot-inner {
+            width: 30px;
+            height: 30px;
+            background: #fff;
+            border-radius: 50%;
+            animation: pulse-dot 2s ease-in-out infinite;
+        }
+
+        @keyframes pulse-ring {
+            0%, 100% {
+                transform: scale(1);
+                box-shadow: 0 0 20px rgba(34, 197, 94, 0.5);
+            }
+            50% {
+                transform: scale(1.1);
+                box-shadow: 0 0 30px rgba(34, 197, 94, 0.8);
+            }
+        }
+
+        @keyframes pulse-dot {
+            0%, 100% {
+                transform: scale(1);
+            }
+            50% {
+                transform: scale(0.9);
+            }
+        }
+
+        .availability-text h3 {
+            font-size: 1.5rem;
+            color: hsl(var(--accent));
+            margin: 0;
+            font-weight: 700;
+            letter-spacing: 0.5px;
+        }
+
+        .availability-text p {
+            margin: 5px 0 0 0;
+            color: hsl(var(--muted-foreground));
+            font-size: 0.95rem;
+        }
+
+        .availability-details {
+            display: flex;
+            flex-direction: column;
+            gap: 12px;
+            position: relative;
+            z-index: 1;
+        }
+
+        .detail-item {
+            display: flex;
+            align-items: center;
+            gap: 12px;
+            padding: 12px 16px;
+            background: rgba(34, 197, 94, 0.1);
+            border-radius: 8px;
+            border-left: 3px solid hsl(var(--accent));
+            transition: all 0.3s;
+        }
+
+        .detail-item:hover {
+            background: rgba(34, 197, 94, 0.15);
+            transform: translateX(5px);
+        }
+
+        .detail-icon {
+            font-size: 1.3rem;
+        }
+
+        .detail-item span:last-child {
+            color: hsl(var(--foreground));
+            font-weight: 500;
         }
 
         /* Buttons */
@@ -521,6 +629,19 @@
             .skills-grid {
                 grid-template-columns: 1fr;
             }
+
+            .availability-card {
+                padding: 20px;
+            }
+            
+            .availability-header {
+                flex-direction: column;
+                text-align: center;
+            }
+            
+            .availability-text h3 {
+                font-size: 1.3rem;
+            }
         }
 
         /* Footer */
@@ -563,9 +684,33 @@
                 <span id="typed-text"></span>
             </div>
 
-            <div class="status">
-                <div class="status-dot"></div>
-                <span>Available for Projects</span>
+            <!-- Improved Availability Card -->
+            <div class="availability-card">
+                <div class="availability-header">
+                    <div class="status-indicator">
+                        <div class="status-dot-outer">
+                            <div class="status-dot-inner"></div>
+                        </div>
+                    </div>
+                    <div class="availability-text">
+                        <h3>Open to Work</h3>
+                        <p>Available for new projects & collaborations</p>
+                    </div>
+                </div>
+                <div class="availability-details">
+                    <div class="detail-item">
+                        <span class="detail-icon">⚡</span>
+                        <span>Quick Response Time</span>
+                    </div>
+                    <div class="detail-item">
+                        <span class="detail-icon">🌍</span>
+                        <span>Remote Friendly</span>
+                    </div>
+                    <div class="detail-item">
+                        <span class="detail-icon">💼</span>
+                        <span>Freelance & Full-time</span>
+                    </div>
+                </div>
             </div>
 
             <div style="margin-top: 30px;">
